--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="module">
       import LightPen from "./exports/light-pen.js";
 
-      window.customElements.define("light-pen", LightPen)
+      LightPen.define()
     </script>
 
     <style>
@@ -20,10 +20,8 @@
     </style>
   </head>
   <body>
-    <light-pen style="padding: 8px; height: 100%;">
+    <light-pen style="padding: 8px; height: 100%;" resize-position="30">
       <template slot="html">
-        <script>console.log("hi")</script>
-        <script src="/index.js"></script>
         <div style="color: red;">
           <div>Hi there friends</div>
         </div>
@@ -37,6 +35,10 @@
         p {
           color: green;
         }
+      </template>
+
+      <template slot="js">
+        console.log("Hi")
       </template>
     </light-pen>
   </body>
