--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
   </head>
   <body>
-    <light-pen style="padding: 8px; height: 100%;" resize-position="30">
+    <light-pen style="padding: 8px; height: 100%;" resize-position="30" open-languages="js,html,css">
       <template slot="html">
         <div style="color: red;">
           <div>Hi there friends</div>
