allow any template

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <light-pen style="padding: 8px; height: 100%;" resize-position="30" open-languages="js,html,css">
-      <template slot="html">
+      <script type="text/plain" slot="html">
         <div style="color: red;">
           <div>Hi there friends</div>
         </div>
@@ -29,17 +29,17 @@
         <p>
           Sup dude
         </p>
-      </template>
+      </script>
 
-      <template slot="css">
+      <script type="text/plain" slot="css">
         p {
           color: green;
         }
-      </template>
+      </script>
 
-      <template slot="js">
+      <script type="text/plain" slot="js">
         console.log("Hi")
-      </template>
+      </script>
     </light-pen>
   </body>
 </html>
