--- a/index.html
+++ b/index.html
@@ -22,23 +22,33 @@
   <body>
     <light-pen style="padding: 8px; height: 100%;" resize-position="30" open-languages="js,html,css">
       <script type="text/plain" slot="html">
-        <div style="color: red;">
-          <div>Hi there friends</div>
-        </div>
-
-        <p>
-          Sup dude
-        </p>
+        <light-pen>
+          <script type="text/plain" slot="html">
+            <div>
+              This is kind of wild huh? We have a <light-pen>
+              component running inside of a <light-pen> component!
+            </div>
+          &lt;/script>
+        </light-pen>
       </script>
 
       <script type="text/plain" slot="css">
-        p {
-          color: green;
+        html, body {
+          height: 100%;
+          min-height: 100%;
+          width: 100%;
+          margin: 0;
+        }
+
+        light-pen {
+          height: 100%;
         }
       </script>
 
       <script type="text/plain" slot="js">
-        console.log("Hi")
+        import LightPen from "/exports/light-pen.js";
+
+        LightPen.define()
       </script>
     </light-pen>
   </body>
