allow vertical textarea resize

--- a/index.html
+++ b/index.html
@@ -25,9 +25,19 @@
         <light-pen>
           <script type="text/plain" slot="html">
             <div>
-              This is kind of wild huh? We have a <light-pen>
-              component running inside of a <light-pen> component!
+              This is kind of wild huh? We have a <code>&lt;light-pen&gt;</code>
+              component running inside of a <code>&lt;light-pen&gt;</code> component!!
             </div>
+          &lt;/script>
+
+          <script type="text/plain" slot="css">
+            code {
+              padding: 2px 6px;
+              display: inline-block;
+              font-size: 0.9em;
+              background-color: rgba(0,0,0,0.05);
+              border-radius: 4px;
+            }
           &lt;/script>
         </light-pen>
       </script>
