--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="module">
-      import LightPen from "./exports/light-pen.js";
+      import LightPen from "/exports/light-pen.js";
 
       LightPen.define()
     </script>
