--- a/pages/light-preview.html
+++ b/pages/light-preview.html
@@ -4,6 +4,7 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <script type="module">
       import LightPreview from "../exports/light-preview.js";
 
@@ -18,36 +19,52 @@
         margin: 0;
       }
 
-      light-preview {
-        margin: 1rem;
+      :is(.flow, section) {
+        padding: 1em;
+      }
+
+      :is(.flow, section) > * + * {
+        margin-top: var(--flow-space, 1em);
+      }
+
+      h1,h2,h3,h4,h5,h6 {
+        margin-top: 1em;
       }
     </style>
   </head>
   <body>
-    <div>
-      <light-preview>
-        <script type="text/plain" slot="code">
-          <style>
-            light-preview::part(iframe) {
-              height: 50px;
-            }
-          </style>
-
-          <light-preview>
-            <script type="text/plain" slot="code">
-              How's this for meta? A &lt;light-preview&gt; inside of a &lt;light-preview&gt;
-            &lt;/script>
-          </light-preview>
-
-          <script type="module">
-            import LightPreview from "/exports/light-preview.js";
-            LightPreview.define()
-          &lt;/script>
-        </script>
-      </light-preview>
-
+    <div class="flow">
       <section>
         <h2>Typical Usage</h2>
+
+        <light-preview>
+          <script slot="iframe-code" type="text/plain">
+            <button>Displaying a super cool button</button>
+          </script>
+          <script type="text/plain" slot="code">
+            <style>
+              light-preview::part(iframe) {
+                height: 50px;
+              }
+            </style>
+
+            <light-preview>
+              <script type="text/plain" slot="code">
+                <button>Displaying a super cool button</button>
+              &lt;/script>
+            </light-preview>
+
+            <script type="module">
+              // import LightPreview from "light-pen/exports/light-preview.js"
+              import LightPreview from "/exports/light-preview.js";
+              LightPreview.define()
+            &lt;/script>
+          </script>
+        </light-preview>
+      </section>
+
+      <section>
+        <h2>Nesting a light-pen inside of a light-pen</h2>
 
         <light-preview>
           <script type="text/plain" slot="code">
@@ -64,6 +81,7 @@
             </light-preview>
 
             <script type="module">
+              // import LightPreview from "light-pen/exports/light-preview.js"
               import LightPreview from "/exports/light-preview.js";
               LightPreview.define()
             &lt;/script>
@@ -95,6 +113,7 @@
             </light-preview>
 
             <script type="module">
+              // import LightPreview from "light-pen/exports/light-preview.js"
               import LightPreview from "/exports/light-preview.js";
               LightPreview.define()
             &lt;/script>
@@ -108,11 +127,105 @@
 
         <h2>Additional buttons</h2>
 
-        <light-preview>
+        <style>
+          #additional-buttons button {
+            appearance: none;
+            -webkit-appearance: none;
+            background-color: inherit;
+            padding: 0.4em 0.6em;
+            color: inherit;
+            border: 1px solid lightgray;
+            border-bottom-color: transparent;
+            border-right-color: transparent;
+            height: 100%;
+            border-radius: 0;
+          }
+
+
+          #additional-buttons button:focus-visible {
+            outline: 2px solid hsl(203, 77%, 43%);
+          }
+
+          @supports not selector(:focus-visible) {
+            #additional-buttons button:focus-within {
+              outline: 2px solid hsl(203, 77%, 43%);
+            }
+          }
+
+          #additional-buttons button:hover {
+            cursor: pointer;
+            color: hsla(203, 77%, 43%);
+            background-color: hsla(203, 77%, 43%, 0.1);
+          }
+        </style>
+
+        <light-preview id="additional-buttons">
           <script type="text/plain" slot="code">
-            <light-preview>
+            <style>
+              #additional-buttons button {
+                appearance: none;
+                -webkit-appearance: none;
+                background-color: inherit;
+                padding: 0.4em 0.6em;
+                color: inherit;
+                border: 1px solid lightgray;
+                border-bottom-color: transparent;
+                border-right-color: transparent;
+                height: 100%;
+                border-radius: 0;
+              }
+
+              #additional-buttons button:focus-visible {
+                outline: 2px solid hsl(203, 77%, 43%);
+              }
+
+              @supports not selector(:focus-visible) {
+                #additional-buttons button:focus-within {
+                  outline: 2px solid hsl(203, 77%, 43%);
+                }
+              }
+
+              #additional-buttons button:hover {
+                cursor: pointer;
+                color: hsla(203, 77%, 43%);
+                background-color: hsla(203, 77%, 43%, 0.1);
+              }
+            </style>
+
+            <light-preview id="additional-buttons">
               <script type="text/plain" slot="code">
+                <style>
+                  #additional-buttons button {
+                    appearance: none;
+                    -webkit-appearance: none;
+                    background-color: inherit;
+                    padding: 0.4em 0.6em;
+                    color: inherit;
+                    border: 1px solid lightgray;
+                    border-bottom-color: transparent;
+                    border-right-color: transparent;
+                    height: 100%;
+                    border-radius: 0;
+                  }
+
+                  #additional-buttons button:focus-visible {
+                    outline: 2px solid hsl(203, 77%, 43%);
+                  }
+
+                  @supports not selector(:focus-visible) {
+                    #additional-buttons button:focus-within {
+                      outline: 2px solid hsl(203, 77%, 43%);
+                    }
+                  }
+
+                  #additional-buttons button:hover {
+                    cursor: pointer;
+                    color: hsla(203, 77%, 43%);
+                    background-color: hsla(203, 77%, 43%, 0.1);
+                  }
+                </style>
                 <p>Showing off more buttons</p>
+
               &lt;/script>
 
               <button slot="actions">HTML</button>
@@ -120,6 +233,7 @@
             </light-preview>
 
             <script type="module">
+              // import LightPreview from "light-pen/exports/light-preview.js"
               import LightPreview from "/exports/light-preview.js";
               LightPreview.define()
             &lt;/script>
@@ -128,8 +242,6 @@
           <button slot="actions">HTML</button>
           <button slot="actions">Codepen</button>
         </light-preview>
-
-
       </section>
     </div>
   </body>
