working on base url

--- a/pages/light-preview.html
+++ b/pages/light-preview.html
@@ -37,7 +37,7 @@
       <section>
         <h2>Typical Usage</h2>
 
-        <light-preview>
+        <light-preview base-url="%BASE_URL%">
           <script slot="iframe-code" type="text/plain">
             <button>Displaying a super cool button</button>
           </script>
@@ -48,7 +48,7 @@
               }
             </style>
 
-            <light-preview>
+            <light-preview base-url="%BASE_URL%">
               <script type="text/plain" slot="code">
                 <button>Displaying a super cool button</button>
               &lt;/script>
@@ -66,7 +66,7 @@
       <section>
         <h2>Nesting a light-pen inside of a light-pen</h2>
 
-        <light-preview>
+        <light-preview base-url="%BASE_URL%">
           <script type="text/plain" slot="code">
             <style>
               light-preview::part(iframe) {
@@ -74,7 +74,7 @@
               }
             </style>
 
-            <light-preview>
+            <light-preview base-url="%BASE_URL%">
               <script type="text/plain" slot="code">
                 <button>Displaying a super cool button</button>
               &lt;/script>
@@ -93,9 +93,9 @@
 
         <h2>Loading inline</h2>
 
-        <light-preview>
+        <light-preview base-url="%BASE_URL%">
           <script type="text/plain" slot="code">
-            <light-preview inline-preview>
+            <light-preview inline-preview base-url="%BASE_URL%">
               <script type="text/plain" slot="code">
                 <style>
                   button.button {
@@ -159,7 +159,7 @@
           }
         </style>
 
-        <light-preview id="additional-buttons">
+        <light-preview id="additional-buttons" base-url="%BASE_URL%">
           <script type="text/plain" slot="code">
             <style>
               #additional-buttons button {
@@ -192,7 +192,7 @@
               }
             </style>
 
-            <light-preview id="additional-buttons">
+            <light-preview id="additional-buttons" base-url="%BASE_URL%">
               <script type="text/plain" slot="code">
                 <style>
                   #additional-buttons button {
