--- a/pages/light-preview.html
+++ b/pages/light-preview.html
@@ -56,7 +56,7 @@
 
             <script type="module">
               // import LightPreview from "light-pen/exports/light-preview.js"
-              import LightPreview from "/exports/light-preview.js";
+              import LightPreview from "./exports/light-preview.js";
               LightPreview.define()
             &lt;/script>
           </script>
@@ -82,7 +82,7 @@
 
             <script type="module">
               // import LightPreview from "light-pen/exports/light-preview.js"
-              import LightPreview from "/exports/light-preview.js";
+              import LightPreview from "./exports/light-preview.js";
               LightPreview.define()
             &lt;/script>
           </script>
@@ -114,7 +114,7 @@
 
             <script type="module">
               // import LightPreview from "light-pen/exports/light-preview.js"
-              import LightPreview from "/exports/light-preview.js";
+              import LightPreview from "./exports/light-preview.js";
               LightPreview.define()
             &lt;/script>
           </script>
@@ -234,7 +234,7 @@
 
             <script type="module">
               // import LightPreview from "light-pen/exports/light-preview.js"
-              import LightPreview from "/exports/light-preview.js";
+              import LightPreview from "./exports/light-preview.js";
               LightPreview.define()
             &lt;/script>
           </script>
