working on light preview docs

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <base href="%BASE_URL%">
+
     <script type="module">
-      import LightPen from "/exports/light-pen.js";
+      import LightPen from "./exports/light-pen.js";
 
       LightPen.define()
     </script>
